--- a/user-dev.yml
+++ b/user-dev.yml
@@ -8,6 +8,11 @@ spring:
     password: 13479190512
   application:
     name: user-service
+  zipkin: 
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      percentage: 1.0
 mybatis:
   type-aliases-package: com.alipay.service.user.entity
 eureka:
